# snakerewind

./: CMakeLists.txt  LICENSE  README.md
doc/: coding_rules.md
src/: GameBoardWidget.cpp  GameBoardWidget.h  GameState.cpp  GameState.h  GameTypes.h  MainWindow.cpp  MainWindow.h  app_icon.rc  main.cpp  resources.qrc
